--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
-    <div>
+    <div class="main-frame">
         <h1>Главная страница</h1>
+        <div>Отображается динамика движения товаров за какой то период (в графиках)</div>
     </div>
 </body>
 </html>
