--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,9 @@
             <div class="menu-item menu-item-mini button" onclick="showPage('home');">
                 <img th:src="@{/images/home.png}" alt="user" width="40px" height="40px"/>
             </div>
+            <div class="menu-item menu-item-mini button" onclick="showPage('store');">
+                <img th:src="@{/images/store.png}" alt="store" width="40px" height="40px"/>
+            </div>
             <div class="menu-item menu-item-mini button" onclick="showPage('users');">
                 <img th:src="@{/images/user.png}" alt="user" width="40px" height="40px"/>
             </div>
@@ -24,13 +27,15 @@
         </div>
         <div class="sidebar sb-full invisible">
             <div class="menu-item button btn-green" onclick="showPage('home');">Главная</div>
+            <div class="menu-item button btn-green" onclick="showPage('store');">Склад</div>
             <div class="menu-item button btn-green" onclick="showPage('users');">Пользователи</div>
             <div class="menu-item button sidebar-arrow" onclick="showHideSidebar();">
                 <img th:src="@{/images/arrow.png}" alt="arrow" width="40px" height="40px"/>
             </div>
-        </div>  
+        </div>
         <div class="work-space indent-92">
             <iframe class="home-page" th:src="@{/home}" seamless></iframe>
+            <iframe class="store-page" th:src="@{/store}" seamless style="display:none;"></iframe>
             <iframe class="users-page" th:src="@{/users/1}" seamless style="display:none;"></iframe>
         </div>
     </div>
