--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link rel="stylesheet" th:href="@{/css/grid.css}"/>
     <link rel="stylesheet" th:href="@{/css/modal.css}"/>
-    <script type="text/javascript" th:src="@{/scripts/users.js}"></script>
     <script type="text/javascript" th:src="@{/scripts/form.js}"></script>
+    <script type="text/javascript" th:src="@{/scripts/users.js}"></script>
     <script type="text/javascript" th:src="@{/scripts/modal.js}"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="add-form" style="display:none;">
-            <form id="add-form" action="#" th:action="@{/save-user}" th:object="${user}" method="post">
+            <form id="add-user-form" action="#" th:action="@{/save-user}" th:object="${user}" method="post">
                 <div class="grid-flex">
                     <input type="text" th:field="*{login}" placeholder="Логин" onblur="unRequired(this);"/>
                     <input type="text" th:field="*{firstname}" placeholder="Имя" onblur="unRequired(this);"/>
@@ -92,7 +92,7 @@
             <div id="id-block" style="display:none;"></div>
             <div>Вы действительно хотите удалить пользователя?</div>
             <div class="modal-flex mt-5" style="justify-content:center;">
-                <div class="button" style="align-self:center;" onclick="deleteUser(this);">
+                <div class="button" style="align-self:center;" onclick="deleteUser();">
                     <img th:src="@{/images/check.png}" alt="arrow" width="28px" height="28px"/>
                 </div>
                 <div class="button" style="align-self:center;" onclick="showModal(this, false, true);">
