Add product pagination

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="work-space indent-92">
             <iframe class="home-page" th:src="@{/home}" seamless></iframe>
-            <iframe class="store-page" th:src="@{/store}" seamless style="display:none;"></iframe>
+            <iframe class="store-page" th:src="@{/store/1}" seamless style="display:none;"></iframe>
             <iframe class="users-page" th:src="@{/users/1}" seamless style="display:none;"></iframe>
         </div>
     </div>
