--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" th:src="@{/scripts/graphs.js}"></script>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
     <div class="main-frame">
         <h1>Главная страница</h1>
-        <div>Отображается динамика движения товаров за какой то период (в графиках)</div>
+        <div class="graphs-block">
+            <div id="actualProductQuant"></div>
+            <div id="movementsProducts"></div>
+        </div>
     </div>
 </body>
 </html>
