--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -45,8 +45,9 @@
             </form>
         </div>
         <div class="filter-form" style="display:none;">
-            <form id="add-product-form" action="#" th:action="@{/use-product-filter}" th:object="${productFilterForm}" method="post">
+            <form id="add-product-form" action="#" th:action="@{/use-product-filter}" th:object="${productForm}" method="post">
                 <div class="grid-flex">
+                    <input type="text" th:field="*{productName}" placeholder="Наименование" onblur="unRequired(this);"/>
                     <select th:field="*{categoryId}" placeholder="Категория" onchange="unRequired(this); setInputColor(this);">
                         <option th:value="0" hidden>Категория</option>
                         <option th:each="category: ${listCategories}" th:value="${category.id}" th:text="${category.name}"></option>
